--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       ;(function (c, l, a, r, i, t, y) {
         c[a] =
           c[a] ||
@@ -25,7 +25,7 @@
         y = l.getElementsByTagName(r)[0]
         y.parentNode.insertBefore(t, y)
       })(window, document, 'clarity', 'script', 'upf813qpsa')
-    </script> -->
+    </script>
   </head>
 
   <body>
